src/objects/JIRA_Issue__c.object
<CustomObject>
    <description>This object is used to house field level information about an issue that will be created in JIRA via an API call</description>
    <fields>
        <fullName>COBRA_Census_Console_Link__c</fullName>
        <label>COBRA Census Console Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_COBRA_Type__c</fullName>
        <label>Company COBRA Type</label>
        <picklist>
            <picklistValues>
                <fullName>Federal Cobra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Continuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Components__c</fullName>
        <label>Component/s</label>
        <picklist>
            <picklistValues>
                <fullName>401k</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cooling_Off_Period__c</fullName>
        <label>Cooling Off Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_COBRA_Administrator__c</fullName>
        <label>Current COBRA Administrator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Console_Link__c</fullName>
        <label>Employee Console Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Employer_Console_Link__c</fullName>
        <label>Employer Console Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <picklist>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JIRA_Link__c</fullName>
        <label>JIRA Link</label>
        <referenceTo>JIRA__c</referenceTo>
        <relationshipLabel>JIRA Issue</relationshipLabel>
        <relationshipName>JIRA_Issue</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labels__c</fullName>
        <label>Labels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lines_of_Coverage__c</fullName>
        <label>Lines of Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Link_to_Sync_Log__c</fullName>
        <label>Link to &quot;Sync Log&quot;</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Payroll_Provider__c</fullName>
        <label>Payroll Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporters_Manager__c</fullName>
        <label>Reporter&apos;s Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Temp_Credentials_or_Email_Address__c</fullName>
        <label>Temp. Credentials or Email Address</label>
        <type>TextArea</type>
    </fields>
    <label>JIRA Issue</label>
    <nameField>
        <label>JIRA Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JIRA Issue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>